fix z-index issue with draggable image

--- a/Resources/public/css/halloLiipStyle.css
+++ b/Resources/public/css/halloLiipStyle.css
@@ -293,5 +293,5 @@
     background-size: cover;
     width: 100px;
     height: 100px;
-    z-index: 1005;
+    z-index: 1050;
 }
